--- a/matcha/templates/matches.html
+++ b/matcha/templates/matches.html
@@ -33,7 +33,7 @@
 
 
 {% block script %}
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-HB2R9wi9SvfpLPbCwTFdrI1rw5bmbiY&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_&callback=initMap"
     async defer></script>
 <script>
     function initMap(){
